<resources>
    <string name="app_name">Ohms Law Calculator R1_0</string>
</resources>
me="CalcOhmsBtnText">Calculate Resistance</string>
    <string name="calcVoltsBtnText">Calculate Voltage</string>
    <string name="calcAmpsBtnText">Calculate Current</string>
    <string name="Param1HintText">Enter value of Parameter 1</string>
    <string name="Param2HintText">Enter value of Parameter 2</string>
    <string name="EnterOhmsHintText">Enter resistance in Ohms</string>
    <string name="EnterVoltsHintText">Enter voltage in Volts</string>
    <string name="EnterAmpsHintText">Enter current in Amps</string>
    <string name="ResultTextlabelText">Result</string>
    <string name="ResultText">Press Calculate Button</string>
    <string name="NoResultText">Could not calculate result</string>
    <string name="calcButtonText">Calculate</string>
    <string name="textParam1Label">Parameter 1:</string>
    <string name="textParam2Label">Parameter 2:</string>
    <string name="textOhmsLabel">Resistance: </string>
    <string name="textVoltsLabel">Voltage: </string>
    <string name="textAmpsLabel">Current: </string>
</resources>
