<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextParam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editTextParam2"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/Param1HintText"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:text="@string/ResultText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ResultTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/ResultTextlabelText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/calcButtonText" />

    <TextView
        android:id="@+id/Param1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextParam1"
        android:layout_alignLeft="@+id/editTextParam1"
        android:layout_marginBottom="42dp"
        android:text="@string/textParam1Label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextParam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextParam1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/Param2HintText"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Param2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextParam2"
        android:layout_below="@+id/editTextParam1"
        android:layout_marginTop="25dp"
        android:text="@string/textParam2Label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

